# sem8-labs

./: .env  Dockerfile.manager  Dockerfile.test  Dockerfile.worker  README.md  docker-compose.yml
.github/workflows/: ci.yml
manager/: CMakeLists.txt  crack_hash_handler.cpp  dispatcher.cpp  dispatcher.hpp  handlers.hpp  inits.cpp  main.cpp  main.hpp  models.cpp  models.hpp  queue.cpp  queue.hpp  result_handler.cpp  rr_balancer.cpp  rr_balancer.hpp  server.cpp  server.hpp  status_handler.cpp  worker_register_handler.cpp
test/: .env  CMakeLists.txt  imgui.ini  main.cpp
worker/: CMakeLists.txt  MD5cracker.cpp  MD5cracker.hpp  config.cpp  crack_task.cpp  crack_task.hpp  handler_crack_task.cpp  main.cpp  main.hpp  registration.cpp  server.cpp  server.hpp
